# search-engine-from-zero

./: .gitignore  LICENSE
basic-search-engine-cursor/: CMakeLists.txt  README.md
basic-search-engine-cursor/src/: main.cpp
basic-search-engine-cursor/src/common/: document.cpp  document.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h
basic-search-engine-cursor/src/index/: forward_index.cpp  forward_index.h  inverted_index.cpp  inverted_index.h
basic-search-engine-cursor/src/query/: search_engine.cpp  search_engine.h
basic-search-engine-cursor/src/rank/: scorer.cpp  scorer.h
basic-search-engine-cursor/src/storage/: index_builder.cpp  index_builder.h
